# VC

./: CMakeLists.txt  README.md
include/: algorithm.hpp  algorithms.hpp  experiment.hpp  experiments.hpp  graph.hpp
include/algorithms/: BF.hpp  GIC.hpp  MDG.hpp  ME.hpp  dummy.hpp  first.hpp  second.hpp
include/experiments/: cover_size.hpp  space.hpp  speed.hpp  time.hpp  time_size.hpp
scripts/: create_csv.py  create_test_base.py  create_tests.py  experiments.py  get_plots_VC_size.py  get_plots_VS_size.py  get_plots_memory_time.py
src/: algorithms.cpp  experiments.cpp  graph.cpp  graph_gen.cpp  main.cpp
src/algorithms/: BF.cpp  GIC.cpp  MDG.cpp  ME.cpp  dummy.cpp  first.cpp  second.cpp
src/experiments/: cover_size.cpp  space.cpp  speed.cpp  time.cpp  time_size.cpp
test/graphs/: graph_0.txt  graph_V100_D2.txt  graph_V10_D0.txt  graph_V20_D4.txt  graph_V30_D5.txt  graph_V40_D1.txt  graph_V50_D8.txt  graph_V60_D9.txt  graph_V70_D7.txt  graph_V80_D3.txt  graph_V90_D6.txt
